--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,8 @@
+<%#= link_to('Back to Homepage', {controller: 'main', action: 'index'}) %>
 
+<% flash.each do |name, msg| %>
+  <%= content_tag :div, msg, id: "flash_#{name}" %>
+<% end %>
 
 <div class="books index">
   <h2>Book Collection</h2>
